<resources>
    <string name="app_name">Notification Later</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">@string/action_settings</string>
    <string name="title_activity_support">Support</string>

    <string name="notification">Notification</string>
    <string name="select_app">Select apps</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="support">Support</string>
    <string name="more_app">More app from me</string>
    <string name="change_log">Change log</string>
    <string name="user_guide">User guide</string>
    <string name="share_app">Share app</string>
    <string name="rate_app">Rate app</string>
    <string name="search">Search</string>
    <string name="search_app">Search app</string>
    <string name="search_nt">Search Notification</string>
    <string name="title_activity_test">TestActivity</string>

    <string name="delete_dialog_title">Delete Notification</string>
    <string name="delete_notification_message">Do you want delete all notification</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">CANCEL</string>
    <string name="title_activity_notification_detail">NotificationDetailActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="btn_go_to_app">GO TO APP</string>
    <string name="date">Date:</string>
    <string name="title">Title:</string>
    <string name="content">Content:</string>
    <string name="delete">Delete</string>
    <string name="un_read_notification">Unread</string>

    <string name="user_interface_setting">User Interface</string>
    <string name="alphabet_title">Alphabet Icon</string>
    <string name="how_to_show_app_icon">How to show alphabet app icon use color or not color</string>
    <string name="random_color">Random color</string>
    <string name="app_icon">Primary color of app icon</string>
    <string name="not_use_alphabet_icon">Use icon default</string>

    <string name="notification_setting">Notification</string>
    <string name="hide_all_notification_title">Hide All Notification</string>
    <string name="hide_all_notification_summary">Can make some other app can not run stable or you can miss importance information same call, message...at the time</string>
    <string name="key_cbHideAllNotification">cbHideAllNotification</string>
    <string name="key_alphabetOption">alphabetOption</string>
    <string name="alphabetOptionDefault">random_color</string>

</resources>
