<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_notification_saved"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/notification" />
        <item
            android:id="@+id/action_select_app"
            android:icon="@drawable/ic_android_black_24dp"
            android:title="@string/select_app" />
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/action_settings" />
    </group>

    <item android:title="@string/contact">
        <menu>
            <item
                android:id="@+id/action_support"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/support" />
        </menu>
    </item>

</menu>